--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,13 @@ dependencies {
     def viewmodel_version = "2.8.7"
     def livedata_version = "2.8.7"
     def activity_version = "1.10.1"
+    def gson_version = "2.12.0"
 
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "com.google.code.gson:gson:$gson_version"
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
