--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,22 @@ dependencies {
     def livedata_version = "2.8.7"
     def activity_version = "1.10.1"
     def gson_version = "2.12.0"
+    def appcompat_version = "1.2.0"
+    def fragment_version = "1.3.1"
+    def fragment_ktx_version = "1.8.6"
+    def nav_version = "2.3.4"
 
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "androidx.fragment:fragment-ktx:$fragment_ktx_version"
     implementation "com.google.code.gson:gson:$gson_version"
+    implementation "androidx.appcompat.appcompat:$appcompat_version"
+    implementation "androidx.fragment.fragment:$fragment_version"
+
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
