--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
@@ -45,7 +46,11 @@ dependencies {
     def fragment_version = "1.3.1"
     def fragment_ktx_version = "1.3.1"
     def nav_version = "2.8.9"
+    def room_ver = "2.5.2"
+//    def room_ver = "2.7.0"
 
+
+    implementation "androidx.room:room-runtime:$room_ver"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
 //    implementation "androidx.appcompat.appcompat:$appcompat_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
@@ -55,6 +60,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
     implementation "com.google.code.gson:gson:$gson_version"
+    kapt "androidx.room:room-compiler:$room_ver"
 
 
     implementation libs.androidx.core.ktx
