--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
     id 'org.jetbrains.kotlin.kapt'
+//    id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -47,7 +49,7 @@ dependencies {
     def fragment_ktx_version = "1.3.1"
     def nav_version = "2.8.9"
     def room_ver = "2.7.0"
-//    def room_ver = "2.7.0"
+//    def play_services_base_version = "18.17.0"
 
 
     implementation "androidx.room:room-runtime:$room_ver"
@@ -60,6 +62,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
     implementation "com.google.code.gson:gson:$gson_version"
+    implementation platform('com.google.firebase:firebase-bom:33.15.0')
+    implementation "com.google.firebase:firebase-messaging-ktx"
+//    implementation "com.google.android.gms:play-service-base:$play_services_base_version"
     kapt "androidx.room:room-compiler:$room_ver"
 
 
